- fix ext3 formatting with label and progress bar (#30032)

Version 10.4.127 - 30 March 2007, by Olivier "blino" Blin

- don't configure /etc/kde/kdm/kdmrc if it doesn't exist
  (other kdmrc.rpmnew will be created, many important values will be missing)
- finish-install: source mandriva-release profile script to get
  correct gtk theme (Frederic Crozat)

Version 10.4.126 - 29 March 2007, by Olivier "blino" Blin

- use pci_domain when matching sysfs device and computing
  sysfs device path

Version 10.4.125 - 29 March 2007, by Olivier "blino" Blin

- fix multiple detection of PCI network cards with the same driver (#29688)

Version 10.4.123 - 26 March 2007, by Olivier "blino" Blin

- blacklist ax*, rose*, nr*, bce* and scc* Hamradio devices
  when detecting network interfaces (#28776)
- harddrake service: fallback on the right driver for ATI gfx cards
  when fglrx module is missing
- introduce shared bootloader functions so that draklive-install and
  drakboot add correct command line parameters (such as resume=)
- use grub by default (noticeable in One install)

Version 10.4.121 - 23 March 2007, by Thierry Vignaud

- interactive::curses: 
  o handle multi-line labels, and wrap too long labels (#29060)
- do not use bold&big for advanced_messages
  (fixes authentication choice being big & ugly, #28676)

Version 10.4.118 - 22 March 2007, by Thierry Vignaud

- diskdrake: 
  o minimal support for switching from ntfs to ntfs-3g
  o move ntfs in the list of "important" filesystems
- enable to set up 32bit media on x86_64
- fix lang configuration in KDE by writting it in current profile

Version 10.4.117 - 21 March 2007, by Thierry Vignaud

- detect all known TV cards (#29633)
- harddrake service:
  o load modules for DVB & TV cards (#29633)
  o switch ATI cards to free driver if binary driver isn't installed
- use http://api.mandriva.com/mirrors/$type.$version.$arch instead of simply
  $version.$arch (useful to differentiate CorpoDesktop4)
