@@ -1,3 +1,5 @@
+- create udev nodes configuration file in /etc/udev/devices.d/ instead
+  of conf.d (used for modem and mouse)
 - fix ext3 formatting with label and progress bar (#30032)
 
 Version 10.4.127 - 30 March 2007, by Olivier "blino" Blin
